# ChangeLog for dev-lang/pugs
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/pugs/Attic/ChangeLog,v 1.5 2005/05/18 21:21:14 mcummings Exp $

*pugs-6.2.3 (18 May 2005)

  18 May 2005; Michael Cummings <mcummings@gentoo.org> +pugs-6.2.3.ebuild:
  Bug 92957; version bump

  11 May 2005; Michael Cummings <mcummings@gentoo.org> pugs-6.0.11.ebuild:
  Changing dep on ghc to virtual - thanks kosmikus :)

  04 May 2005; David Holm <dholm@gentoo.org> pugs-6.0.11.ebuild:
  Added to ~ppc.

  17 Mar 2005; Michael Cummings <mcummings@gentoo.org> pugs-6.0.11.ebuild:
  Better handling of the either/or dep

*pugs-6.0.11 (14 Mar 2005)

  14 Mar 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +pugs-6.0.11.ebuild:
  Introducing pugs, an implementation of the not yet released perl6 language
  using haskell. Ebuild worked on tirelessly by Adrian Lambeck
  <adrian@basicsedv.de> in bug 8335. This is being added to dev-lang since
  currently it is a seperate entity from dev-lang/perl.
