@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 3e3acb67aabdc0e08e2ceff310fa27cf ChangeLog 1052
-MD5 9b22fae8c9c831a52de40862635a0763 files/digest-pugs-6.0.11 69
-MD5 d5e4dbe7341fe4043de32ec0fca783bd files/digest-pugs-6.2.3 68
+MD5 facc27a1e6ed9a872f2076b612725a2a ChangeLog 1239
 MD5 e195d07dd8c771cb3816ab6cece1510e metadata.xml 464
-MD5 07a195c0bdadd7b5d9da0dd456e48282 pugs-6.0.11.ebuild 582
-MD5 7ace74efbc137da8fa877331841c76a5 pugs-6.2.3.ebuild 596
+MD5 2786eef5c97a1981c9c5cfb61f4b94e4 pugs-6.2.9.ebuild 1019
+MD5 a6449849fecfd8db5e4e089e1565a706 files/digest-pugs-6.2.9 69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCz/TyI1lqEGTUzyQRAoq7AJ4hx/adWxQSlWFYQBwmFY7vcGmirwCgzaP2
-t/11AXV61Ijj9nQqlrf5lvI=
-=AVsn
+iD8DBQFDAE+PtG5z4I8BtQoRAiQZAJ4haDA6ZCeVgbmyZFE0EqdCq/vKGQCdFDr/
+ye8/FLXfRrRtOTGUne1dzZg=
+=8yTZ
 -----END PGP SIGNATURE-----
