@@ -1,1 +1,0 @@
-MD5 0ff4b1f4b93d2288894e975f0e4926a1 Perl6-Pugs-6.0.11.tar.gz 315826
