@@ -1,1 +1,0 @@
-MD5 2ddc097bf8f19ad0d46f7f70ad042ae3 Perl6-Pugs-6.2.3.tar.gz 894640
