@@ -1,22 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/pugs/Attic/pugs-6.0.11.ebuild,v 1.5 2005/07/09 16:01:29 swegener Exp $
-
-inherit perl-module
-
-MY_P="Perl6-Pugs-${PV}"
-S=${WORKDIR}/${MY_P}
-
-DESCRIPTION="Pugs is an implementation of Perl 6, written in Haskell"
-HOMEPAGE="http://pugscode.org/"
-SRC_URI="mirror://cpan/authors/id/A/AU/AUTRIJUS/${MY_P}.tar.gz"
-LICENSE="|| ( Artistic GPL-2 )"
-
-SLOT="0"
-KEYWORDS="~x86 ~amd64 ~ppc"
-
-IUSE=""
-
-DEPEND="dev-perl/Term-ReadLine-Perl
-		virtual/ghc"
-
