@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/pugs
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/pugs/Attic/ChangeLog,v 1.5 2005/05/18 21:21:14 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/pugs/Attic/ChangeLog,v 1.6 2005/08/15 08:17:02 mcummings Exp $
+
+*pugs-6.2.9 (15 Aug 2005)
+
+  15 Aug 2005; Michael Cummings <mcummings@gentoo.org> -pugs-6.0.11.ebuild,
+  -pugs-6.2.3.ebuild, +pugs-6.2.9.ebuild:
+  Version bump, bug 93988, thanks Adrian
 
 *pugs-6.2.3 (18 May 2005)
 
